--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=banking-app
+
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_app
+spring.datasource.username=root
+spring.datasource.password=Riza@sql1
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
